--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "eslint": "^5.3.0",
     "eslint-config-google": "^0.9.1"
   }
