🎉 Added react hot module

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-	"presets": ["babel-eslint"],
-	"plugins": ["transform-decorators-legacy"]
-}
+	"plugins": ["transform-decorators-legacy", "react-hot-loader/babel"
+		"]
+	}
