--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "mobx-react": "^5.2.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,6 +24,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-google": "^0.9.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
