--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "mobx": "^5.0.3",
     "mobx-react": "^5.2.3",
+    "mobx-react-router": "^4.0.4",
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
