--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-	"plugins": ["transform-decorators-legacy", "react-hot-loader/babel"
-		"]
-	}
+	"plugins": ["transform-decorators-legacy", "react-hot-loader/babel"]
+}
